# kraf

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-06-project-initializer.md
docs/superpowers/specs/: 2026-06-06-project-initializer-design.md
src/project_initializer/: cli.py  config.py  pack.py  prompts.py
src/project_initializer/packs/common/templates/: README.md.j2
src/project_initializer/packs/django/: pack.yaml
src/project_initializer/packs/django/templates/project/: settings.py.j2
src/project_initializer/packs/django_drf/: pack.yaml
src/project_initializer/packs/django_drf/templates/api/: serializers.py.j2  urls.py.j2  views.py.j2
src/project_initializer/packs/django_models/: pack.yaml
src/project_initializer/packs/django_models/templates/core/: models.py.j2
src/project_initializer/packs/django_models/templates/core/migrations/: 0001_initial.py.j2
src/project_initializer/packs/fastapi/templates/app/: main.py.j2
src/project_initializer/packs/migrations_alembic/: pack.yaml
src/project_initializer/packs/migrations_alembic/templates/alembic/: env.py.j2  script.py.mako.j2
src/project_initializer/packs/migrations_alembic/templates/scripts/: create_migration.py.j2
src/project_initializer/packs/orm_sqlalchemy/: pack.yaml
src/project_initializer/packs/orm_sqlalchemy/templates/app/db/: models.py.j2  session.py.j2
src/project_initializer/packs/orm_sqlmodel/: pack.yaml
src/project_initializer/packs/orm_sqlmodel/templates/app/api/: users.py.j2
src/project_initializer/packs/orm_sqlmodel/templates/app/db/: base.py.j2  models.py.j2  session.py.j2
src/project_initializer/packs/orm_sqlmodel/templates/app/schemas/: user.py.j2
tests/: test_cli.py  test_config.py  test_pack_loading.py  test_prompts.py  test_renderer.py  test_resolver.py
