[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kraf"
version = "0.1.4"
description = "Interactive Python web project initializer for Django, Django REST Framework, and FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.0",
  "questionary>=2.1.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/diwakaritservices/kraf"
Repository = "https://github.com/diwakaritservices/kraf"
Issues = "https://github.com/diwakaritservices/kraf/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
kraf = "project_initializer.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["src/project_initializer"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
]
